--- a/back/package.json
+++ b/back/package.json
@@ -3,8 +3,12 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
