--- a/back/package.json
+++ b/back/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "npx ts-node sr.ts"
+  },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
@@ -13,6 +16,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/multer": "^1.4.11"
+    "@types/multer": "^1.4.11",
+    "concurrently": "^8.2.2"
   }
 }
