--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
 		"@mui/styled-engine-sc": "^6.0.0-alpha.18",
 		"@mui/x-charts": "^7.8.0",
 		"@mui/x-data-grid": "^7.7.1",
+		"@radix-ui/themes": "^3.1.3",
 		"@tanstack/react-query": "^5.45.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
