--- a/front/package.json
+++ b/front/package.json
@@ -18,10 +18,14 @@
 		"@mui/x-charts": "^7.8.0",
 		"@mui/x-data-grid": "^7.7.1",
 		"@radix-ui/themes": "^3.1.3",
+		"@react-pdf-viewer/core": "^3.12.0",
+		"@react-pdf/renderer": "^3.4.4",
 		"@tanstack/react-query": "^5.45.1",
+		"pdfjs-dist": "^3.11.174",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.52.0",
+		"react-pdf": "^9.1.0",
 		"react-router-dom": "^6.23.1",
 		"styled-components": "^6.1.11",
 		"zod": "^3.23.8"
