--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
 		"@mui/x-charts": "^7.8.0",
 		"@mui/x-data-grid": "^7.7.1",
 		"@radix-ui/themes": "^3.1.3",
+		"@react-pdf-viewer/core": "^3.12.0",
 		"@tanstack/react-query": "^5.45.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
