--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/themes": "^3.1.3",
 		"@react-pdf-viewer/core": "^3.12.0",
 		"@tanstack/react-query": "^5.45.1",
+		"framer-motion": "^11.3.31",
 		"node-forge": "^1.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
