--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
 		"framer-motion": "^11.3.31",
 		"node-forge": "^1.3.1",
 		"react": "^18.2.0",
+		"react-calendar": "^5.0.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.52.0",
 		"react-router-dom": "^6.23.1",
