--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.52.0",
 		"react-router-dom": "^6.23.1",
+		"recharts": "^2.12.7",
 		"styled-components": "^6.1.11",
 		"zod": "^3.23.8"
 	},
