--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
@@ -17,6 +18,7 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
+    "@types/pdf-parse": "^1.1.4",
     "concurrently": "^8.2.2"
   }
 }
