--- a/back/.gitignore
+++ b/back/.gitignore
@@ -1,16 +1,17 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+back/logs.json  # Исключаем logs.json из директории back
 
 # Build directories
-node_modules
-dist
-dist-ssr
+node_modules/
+dist/
+dist-ssr/
 
 # Local configuration files
 *.local
