--- a/front/package.json
+++ b/front/package.json
@@ -20,16 +20,20 @@
 		"@radix-ui/themes": "^3.1.3",
 		"@react-pdf-viewer/core": "^3.12.0",
 		"@tanstack/react-query": "^5.45.1",
+		"date-fns": "^2.30.0",
 		"framer-motion": "^11.3.31",
+		"moment": "^2.30.1",
+		"moment-timezone": "^0.5.46",
 		"node-forge": "^1.3.1",
-		"react": "^18.2.0",
-		"react-calendar": "^5.0.0",
+		"react": "^18.3.1",
+		"react-big-calendar": "^1.15.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.52.0",
 		"react-router-dom": "^6.23.1",
 		"react-toastify": "^10.0.6",
 		"recharts": "^2.12.7",
 		"styled-components": "^6.1.11",
+		"the": "^1.0.2",
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
